guestbook/guestbook-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ui
  namespace: default
spec:
  rules:
    - host: guestbook-ui.test.com
      http:
        paths:
        - path: /
          backend:
            serviceName: guestbook-ui
            servicePort: 80
